[project]
name = "traffic-lights-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.7",
    "torch>=2.11.0",
    "torchrl>=0.11.1",
    "wandb>=0.26.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
